--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -155,6 +155,9 @@
                 {% endif %}
                 
                 <div class="mt-4 text-center">
+                    <a href="{{ url_for('auth.change_password') }}" class="btn btn-warning me-2">
+                        <i class="bi bi-key me-2"></i>Change Password
+                    </a>
                     <a href="{{ url_for('main.dashboard') }}" class="btn btn-primary">
                         <i class="bi bi-arrow-left me-2"></i>Back to Dashboard
                     </a>
