--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -43,6 +43,11 @@
                                 {% endfor %}
                             </div>
                         {% endif %}
+                        <div class="text-end mt-2">
+                            <a href="{{ url_for('auth.forgot_password') }}" class="text-primary small">
+                                <i class="fas fa-key"></i> Forgot Password?
+                            </a>
+                        </div>
                     </div>
                     
                     <div class="d-grid">
